refactor: centralize thread runner code