@@ -6,9 +6,14 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 /**
- * Simulation virtual thread runner
+ * Simulation OS thread runner
  */
-public class VirtualThreadRunner extends ThreadRunner {
+public class OsThreadRunner extends ThreadRunner {
+
+    /**
+     * Number of threads
+     */
+    protected final int nbThreads;
 
     /**
      * Constructor
@@ -17,19 +22,21 @@ public class VirtualThreadRunner extends ThreadRunner {
      * @param playerDoorStrategy Player door strategy
      * @param switchStrategy Switch strategy
      * @param nbGames Number of games
+     * @param nbThreads Number of threads
      */
-    public VirtualThreadRunner(final DoorStrategy carDoorStrategy, final DoorStrategy playerDoorStrategy,
-        final SwitchStrategy switchStrategy, final int nbGames) {
+    public OsThreadRunner(final DoorStrategy carDoorStrategy, final DoorStrategy playerDoorStrategy,
+        final SwitchStrategy switchStrategy, final int nbGames, final int nbThreads) {
         super(carDoorStrategy, playerDoorStrategy, switchStrategy, nbGames);
+        this.nbThreads = nbThreads;
     }
 
     @Override
     public String toString() {
-        return "VirtualThreadRunner";
+        return String.format("ThreadRunner{%d}", nbThreads);
     }
 
     @Override
     protected ExecutorService executorService() {
-        return Executors.newVirtualThreadPerTaskExecutor();
+        return Executors.newFixedThreadPool(nbThreads);
     }
 }
